# pokerust

./: Cargo.toml  README.md
examples/: sprites.rs
src/: cache.rs  lib.rs  util.rs
src/pokeapi/: berries.rs  contests.rs  encounters.rs  evolution.rs  games.rs  items.rs  locations.rs  machines.rs  mod.rs  moves.rs  pokemon.rs  resource_lists.rs  utility.rs
tests/: common.rs  exhaustive.rs  from.rs  list.rs
