[package]
name = "pokerust"
version = "0.1.0"
authors = ["lunik1 <lunik1@users.noreply.github.com>"]
edition = "2018"
description = "Pokeapi wrapper"
license = "BSD-3-Clause"

[dependencies]
minreq = { version = "2", features = ["https", "json-using-serde", "punycode"] }
serde = { version = "1.0", features = ["derive"] }
cached = "0.11.0"
lazy_static = "1.4.0"

[dev-dependencies]
mockito = "0.23.0"
paste = "0.1"

[profile.release]
lto = true
codegen-units = 1
incremental = false
